Small refactorings - corrected typo - replaced deprecated code